# parallelism-task-8

./: CMakeLists.txt  Makefile  README.md  main.cu
